<resources>
    <string name="app_name">MaterialUITemplate</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MENUS -->
    <string name="menu_add_item">Add Item</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_sub_item_1">Navigation Sub Item 1</string>
    <string name="nav_sub_item_2">Navigation Sub Item 2</string>
    <string name="nav_subheader_text">Sub Items</string>
    <string name="nav_header_title">My Awesome App</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
