<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <!-- Main Navigation -->
        <item
            android:id="@+id/nav_settings"
            android:checked="true"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help"/>

        <!-- Sub Headers -->
        <item
            android:id="@+id/nav_subheader"
            android:title="@string/nav_subheader_text">
            <menu>
                <item
                    android:id="@+id/nav_sub_item_1"
                    android:icon="@android:drawable/ic_menu_gallery"
                    android:title="@string/nav_sub_item_1"/>
                <item
                    android:id="@+id/nav_sub_item_2"
                    android:icon="@android:drawable/ic_menu_gallery"
                    android:title="@string/nav_sub_item_2"/>
            </menu>
        </item>
    </group>
</menu>